--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
     "i18next": "^25.3.4",
+    "multer": "^2.0.2",
     "mysql2": "^3.15.3",
     "pg": "^8.11.3",
-    "react-i18next": "^15.6.1"     
-  }, 
+    "react-i18next": "^15.6.1"
+  },
   "devDependencies": {
     "nodemon": "^3.1.0"
   }
